--- a/styless.css
+++ b/styless.css
@@ -1,10 +1,9 @@
-body{
-width: 100%;
-height: auto;
-margin: auto;
-overflow-x: auto;
-overflow-y: auto;
+*{
+  margin: 0;
+  padding: 0;
+  
 }
+
 
 nav{
   display: flex;
@@ -12,173 +11,170 @@ nav{
   justify-content: space-between;
   background-color: grey;
   color:white;
-  font-size: 24px;
+  font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
-  padding: 10px;
-  margin-left: 18px;
-  margin-right: -1px;
-  width: 1600px;
+ padding: 20px;
+ margin-left: 30px;
+ margin-right: 0;
+ box-sizing: border-box;
 }
-header{
-display: flex;
-justify-content: space-between;
-align-items: center;
-font-size: 20px;
-margin: auto;
-width: auto;
-height: auto;
-}
+
 dl{
   display: inline;
   justify-content: space-between;
   align-items: center;
   color: white;
-  font-size: 24px;
+  font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
-
+ text-decoration: none;
+}
+dl a{
+  color: white;
 }
 dt{
   justify-content: space-between;
   display: inline;
-  text-decoration: underline;
+  text-decoration: none;
+ margin: 0 10px;
 }
-main{
-  width: 1600px;
+header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 20px;
+  margin: 0;
+  height: auto;
 }
 p{
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
+  font-size: 25px;
   text-align:left;
+  padding: 15px;
+  margin:0;
 }
 h1{
   font-family: Arial, Helvetica, sans-serif;
-  font-size:25px;
+  font-size:20px;
   text-align: left;
+}
+h2{
+margin-left: 25px;
+font-size: 30px;
+}
+section{
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  width: 100%;
+  height: auto;
+  margin-bottom: 0px;
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 15px;
+ 
+  };
 
-
+.icons-img{
+height: 100px;
+margin:18px;
+height: auto;
+padding: 10px;
 }
 img{
-height: 180px;
-margin:18px;
-
-
+  height:180px ;
+  padding: 12px;
+}
+.container{
+ margin: 0;
+  padding: 0;
+  width: 2500px;
+}
+.header-container{
+padding:  20px;
+width: 100%;
+margin: 0;
 }
 .esportes-container{
-  display:flex;
-  margin-left: 18px;
-  margin-right: auto;
+  display: flex;
+  justify-content: center;
+  margin: 0 40px;
   width: 100%;
   height: auto;
   margin-bottom: 36px;
 
 }
 .esportes-section{
-  display: flex;
-  font-weight: bold;
+
   background-color: rgba(0, 255, 0, 0.2);
-  flex-wrap: wrap;
-  text-decoration: none;
-  padding: 10px;
-  box-sizing: border-box;
-  font-size: 25px;
-  margin-left: 18px;
-  margin-right: auto;
-  width: 100%;
+  
+
 }
 .button-esportes{
   color:#ffffff;
-  background-color: rgba(0,255,0,0.8);
+  background-color: rgba(0,255,0,0.5);
 font-weight: bold;
-font-size: 18px;
-margin-left: 18px;
-margin-right: auto;
+font-size: 20px;
+padding: 3px;
 }
 .economia-container{
-  display:flex;
-  margin-left: 18px;
-  margin-right: auto;
+  display: flex;
+  justify-content: center;
+  margin: 0 40px;
   width: 100%;
   height: auto;
   margin-bottom: 36px;
 }
 .economia-section{
-  display: flex;
-  justify-content: space-between;
-  font-weight: bold;
+
   background-color:  rgba(230, 227, 30, 0.5);
-  flex-wrap: wrap;
-  text-decoration: none;
-  padding: 10px;
-  box-sizing: border-box;
-  font-size: 25px;
-  margin-left: 18px;
-  margin-right: auto;
-  width: 100%;
+
 }
 .button-economia{
   color:#ffffff;
-  background-color: rgba(290,229,30,0.6);
+  background-color: rgba(255, 102, 0, 0.788);
 font-weight: bold;
-font-size: 18px;
-margin-left: 18px;
-margin-right: auto;
+font-size: 20px;
+padding: 3px;
 }
 .tecnologia-container{
-  display:flex;
-  margin-left: 18px;
-  margin-right: auto;
+  display: flex;
+  justify-content: center;
+  margin: 0 40px;
   width: 100%;
   height: auto;
   margin-bottom: 36px;
 }
 .tecnologia-section{
-  display: inline-block;
-  font-weight: bold;
+
   background-color: rgba(24, 27, 179, 0.5);
-  flex-wrap: wrap;
-  text-decoration: none;
-  padding: 10px;
-  box-sizing: border-box;
-  font-size: 25px;
-  margin-left: 18px;
-  margin-right: auto;
-  width: 100%;
+
 
 }
 .button-tecnologia{
   color:#ffffff;
   background-color: rgba(24,27,178,0.9);
 font-weight: bold;
-font-size: 18px;
-margin-left: 18px;
-margin-right: auto;
+font-size: 20px;
+padding: 3px;
 }
 .entretenimento-container{
-  display:flex;
-  margin-left: 18px;
-  margin-right: auto;
+  display: flex;
+  justify-content: center;
+  margin: 0 40px;
   width: 100%;
   height: auto;
   margin-bottom: 36px;
 }
 .entretenimento-section{
-  display: inline-block;
-  font-weight: bold;
+
   background-color: rgba(11, 126, 68, 0.5);
-  flex-wrap: wrap;
-  text-decoration: none;
-  padding: 10px;
-  box-sizing: border-box;
-  font-size: 25px;
-  margin-left: 18px;
-  margin-right:auto;
-  width: 100%;
+
 }
 .button-entretenimento{
   color:#ffffff;
   background-color: rgba(11,126,68,0.8);
 font-weight: bold;
-font-size: 18px;
-margin-left: 18px;
-margin-right: auto;
+font-size: 20px;
+padding: 3px;
 }
+
